Cambio el tamaño del canvas (#6)
Ahora el canvas es más grande

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js"
             integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ=="
             crossorigin="anonymous" defer>
-        </script>
+    </script>
         <!-- TODO MORE -->
     </head>
     <body>
-        <canvas id="glCanvas" width="640" height="480"></canvas>
+        <!--<canvas id="glCanvas" width="640" height="480"></canvas>-->
+        <canvas id="glCanvas" width="960" height="720"></canvas>
     </body>
 </html>
