--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         <div id="glCanvas-wrapper">
         <canvas id="glCanvas"  width="720" height="720"></canvas>
         </div>
+        <div id="numIteraciones-wrapper">
+        Número de iteraciones: <input id="numIteraciones" type="range" min="100" max="1000" step="25">
+        <div id="numero"></div>
+        </div>
     </body>
 </html>
