Añadido deslizador para variar el exponente (#12)

--- a/index.html
+++ b/index.html
@@ -40,5 +40,15 @@
             </div>
             <div id="valorJuliaY"></div>
         </div>
+        Exponente n de la función f(z) = z^n + c
+        <div class="deslizador" id="deslizadorExponente">
+            <div>
+            <b>n:</b>
+            </div>
+            <div>
+            <input id="exponente" type="range" min="1" max="10" step="1">
+            </div>
+            <div id="valorExponente"></div>
+        </div>
     </body>
 </html>
