Parametrizado el fractal a visualizar (#15)

--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
             </div>
             <div id="valorNIteraciones"></div>
         </div>
+        <div class="fractal">
         ¿Qué fractal quieres ver?
-        <form>
-            <label for="fractal">Elige un fractal:</label>
-            <input list="fractales" name="fractal" id="fractal">
-            <datalist id="fractales">
-                <option value="Mandelbrot">
-                <option value="Julia">
-            </datalist>
-            <input type="submit">
-        </form>
+            <select id="fractales">
+                <option value="0">Mandelbrot</option>
+                <option value="1">Julia</option>
+            </select>
+        </div>
         Constante del Conjunto de Julia c = x + i*y
         <div class="deslizador" id="deslizadorJuliaX">
             <div>
