Añadido botón de reset (#30)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                 <input id="exponente" type="range" min="1" max="10" step="1">
                 </div>
                 <div id="valorExponente"></div>
-            </div>
+            </div><br>
+            <b>Volver a los parámetros por defecto</b><br>
+            <button id="botonReset">Reset</button>
 
         </aside>
         <footer>
