--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -3,7 +3,7 @@
     <head>
         <title>Ray Tracer Básico</title>
         <meta charset="UTF-8">
-        <script type="module"  src="static/js/3D/ray-tracer.js"></script>
+        <script type="module"  src="static/js/ray-tracer.js"></script>
         <link rel="stylesheet" href="static/css/style.css">
         <!-- MathJax para las expresiones matemáticas -->
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
