Cambios en el estilo de la web

--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -19,10 +19,18 @@
             <canvas id="glCanvas"  width="1280" height="720"></canvas>
         </main>
         <aside>
-            <h1>Controles:</h1>
-            Aquí irán los Controles
+            <h3>Controles:</h3>
+            <ul>
+                <li>Teclas +/-: Ampliar o reducir el zoom</li>
+                <li>Flechas: Desplazarse por el espacio</li>
+            </ul>
             <b>Volver a los parámetros por defecto</b><br>
             <button id="botonReset">Reset</button>
+            <div  id="posicion-actual">
+                <b>Posición actual: </b><div id="marcador-posicion"></div>
+
+            </div>
+
 
         </aside>
         <footer>
