Registrado y normalizado desplazamiento del ratón

--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -43,7 +43,9 @@
             <button id="botonReset">Reset</button>
             <div  id="posicion-actual">
                 <b>Posición actual: </b><div id="marcador-posicion"></div>
-
+            </div>
+            <div  id="posicion-raton">
+                <b>Posición ratón: </b><div id="marcador-raton"></div>
             </div>
 
 
