--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -39,6 +39,17 @@
                 <div id="valor_sh"></div>
             </div>
             <input id="light_color" type="color"> Color de la luz<br>
+            <b>Epsilon</b><br>
+            <div class="deslizador" id="epsilon">
+                <div>
+                <b>\(\varepsilon\):</b>
+                </div>
+                <div>
+                <input id="current_epsilon" type="range" min="0.0001" max="0.1" step="0.000001">
+                </div>
+                <div id="valor_epsilon"></div>
+            </div>
+
             <b>Volver a los parámetros por defecto</b><br>
             <button id="botonReset">Reset</button>
             <div  id="posicion-actual">
