Parametrizada contante C de Julia y mejorado color (#52)

--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -39,6 +39,43 @@
                 <div id="valor_sh"></div>
             </div>
             <input id="light_color" type="color"> Color de la luz<br>
+            <b>Constante del Conjunto de Julia</b><br> \(c = i\cdot x + j\cdot y + k\cdot z + w \)
+            <div class="deslizador" id="deslizadorJuliaX">
+                <div>
+                <b>x:</b>
+                </div>
+                <div>
+                <input id="juliaX" type="range" min="-2" max="2" step="0.01">
+                </div>
+                <div id="valorJuliaX"></div>
+            </div>
+            <div class="deslizador" id="deslizadorJuliaY">
+                <div>
+                <b>y:</b>
+                </div>
+                <div>
+                <input id="juliaY" type="range" min="-2" max="2" step="0.01">
+                </div>
+                <div id="valorJuliaY"></div>
+            </div>
+            <div class="deslizador" id="deslizadorJuliaZ">
+                <div>
+                <b>z:</b>
+                </div>
+                <div>
+                <input id="juliaZ" type="range" min="-2" max="2" step="0.01">
+                </div>
+                <div id="valorJuliaZ"></div>
+            </div>
+            <div class="deslizador" id="deslizadorJuliaW">
+                <div>
+                <b>w:</b>
+                </div>
+                <div>
+                <input id="juliaW" type="range" min="-2" max="2" step="0.01">
+                </div>
+                <div id="valorJuliaW"></div>
+            </div><br>
             <b>Epsilon</b><br>
             <div class="deslizador" id="epsilon">
                 <div>
