--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -39,6 +39,13 @@
                 <div id="valor_sh"></div>
             </div>
             <input id="light_color" type="color"> Color de la luz<br>
+            <div class="fractal">
+                <b>¿Qué fractal quieres ver?</b>
+                <select id="fractales">
+                    <option value="0">Mandelbub</option>
+                    <option value="1">Julia</option>
+                </select>
+            </div><br>
             <b>Constante del Conjunto de Julia</b><br> \(c = i\cdot x + j\cdot y + k\cdot z + w \)
             <div class="deslizador" id="deslizadorJuliaX">
                 <div>
