Doy una corrección a todo (#49)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>WebGL-Canvas</title>
         <meta charset="UTF-8">
-        <script type="module"  src="static/js/canvas-mandelbrot.js"></script>
+        <script type="module"  src="static/js/fractals-2D.js"></script>
         <link rel="stylesheet" href="static/css/style.css">
         <!-- MathJax para las expresiones matemáticas -->
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
