Añadido Mandelbrot generalizado (#47)

--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -42,8 +42,9 @@
             <div class="fractal">
                 <b>¿Qué fractal quieres ver?</b>
                 <select id="fractales">
-                    <option value="0">Mandelbub</option>
-                    <option value="1">Julia</option>
+                    <option value="1">Mandelbub</option>
+                    <option value="2">Julia</option>
+                    <option value="3">Mandelbrot</option>
                 </select>
             </div><br>
             <b>Constante del Conjunto de Julia</b><br> \(c = i\cdot x + j\cdot y + k\cdot z + w \)
