Creados materiales globales

--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -42,7 +42,7 @@
             <div class="fractal">
                 <b>¿Qué fractal quieres ver?</b>
                 <select id="fractales">
-                    <option value="1">Mandelbub</option>
+                    <option value="1" selected>Mandelbub</option>
                     <option value="2">Julia</option>
                     <option value="3">Mandelbrot</option>
                 </select>
