--- a/ray_tracer.html
+++ b/ray_tracer.html
@@ -42,7 +42,7 @@
             <div class="fractal">
                 <b>¿Qué fractal quieres ver?</b>
                 <select id="fractales">
-                    <option value="1" selected>Mandelbub</option>
+                    <option value="1" selected="selected">Mandelbub</option>
                     <option value="2">Julia</option>
                     <option value="3">Mandelbrot</option>
                 </select>
@@ -90,7 +90,7 @@
                 <b>\(\varepsilon\):</b>
                 </div>
                 <div>
-                <input id="current_epsilon" type="range" min="0.0001" max="0.1" step="0.000001">
+                <input id="current_epsilon" type="range" min="1" max="4" step="0.5">
                 </div>
                 <div id="valor_epsilon"></div>
             </div>
