Cambios en el modelo de iluminación (#57)

--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -94,6 +94,8 @@
                 </div>
                 <div id="valor_epsilon"></div>
             </div>
+            <button id="contador">Tiempo de procesado</button>
+            <div id="contador-valor"></div><br>
 
             <b>Volver a los parámetros por defecto</b><br>
             <button id="botonReset">Reset</button>
