--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -3,7 +3,7 @@
     <head>
         <title>Ray Tracer Básico</title>
         <meta charset="UTF-8">
-        <script type="module"  src="static/js/ray-tracer.js"></script>
+        <script type="module"  src="static/js/fractals-3D.js"></script>
         <link rel="stylesheet" href="static/css/style.css">
         <!-- MathJax para las expresiones matemáticas -->
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -38,7 +38,10 @@
                 </div>
                 <div id="valor_sh"></div>
             </div>
-            <input id="light_color" type="color"> Color de la luz<br>
+            <input id="light_color_0" type="color"> Color de la luz lateral izquierda<br>
+            <input type="checkbox" id="shadows_0" value="0"> <label for="shadow_0">Sombras arrojadas</label><br>
+            <input id="light_color_1" type="color"> Color de la luz lateral derecha<br>
+            <input type="checkbox" id="shadows_1" value="0"> <label for="shadow_1">Sombras arrojadas</label><br>
             <div class="fractal">
                 <b>¿Qué fractal quieres ver?</b>
                 <select id="fractales">
@@ -47,42 +50,55 @@
                     <option value="3">Mandelbrot</option>
                 </select>
             </div><br>
-            <b>Constante del Conjunto de Julia</b><br> \(c = i\cdot x + j\cdot y + k\cdot z + w \)
-            <div class="deslizador" id="deslizadorJuliaX">
+            <section id="constanteJulia">
+                <b>Constante del Conjunto de Julia</b><br> \(c = i\cdot x + j\cdot y + k\cdot z + w \)
+                <div class="deslizador" id="deslizadorJuliaX">
+                    <div>
+                    <b>x:</b>
+                    </div>
+                    <div>
+                    <input id="juliaX" type="range" min="-2" max="2" step="0.01">
+                    </div>
+                    <div id="valorJuliaX"></div>
+                </div>
+                <div class="deslizador" id="deslizadorJuliaY">
+                    <div>
+                    <b>y:</b>
+                    </div>
+                    <div>
+                    <input id="juliaY" type="range" min="-2" max="2" step="0.01">
+                    </div>
+                    <div id="valorJuliaY"></div>
+                </div>
+                <div class="deslizador" id="deslizadorJuliaZ">
+                    <div>
+                    <b>z:</b>
+                    </div>
+                    <div>
+                    <input id="juliaZ" type="range" min="-2" max="2" step="0.01">
+                    </div>
+                    <div id="valorJuliaZ"></div>
+                </div>
+                <div class="deslizador" id="deslizadorJuliaW">
+                    <div>
+                    <b>w:</b>
+                    </div>
+                    <div>
+                    <input id="juliaW" type="range" min="-2" max="2" step="0.01">
+                    </div>
+                    <div id="valorJuliaW"></div>
+                </div><br>
+            </section>
+            
+            <input type="checkbox" id="antiliasing" value="0"> <label for="antiliasing">Antiliasing</label><br>
+            <div class="deslizador" id="deslizadorNSamples">
                 <div>
-                <b>x:</b>
+                <b>Rayos por píxel:</b>
                 </div>
                 <div>
-                <input id="juliaX" type="range" min="-2" max="2" step="0.01">
+                <input id="nSamples" type="range" min="1" max="4" step="1">
                 </div>
-                <div id="valorJuliaX"></div>
-            </div>
-            <div class="deslizador" id="deslizadorJuliaY">
-                <div>
-                <b>y:</b>
-                </div>
-                <div>
-                <input id="juliaY" type="range" min="-2" max="2" step="0.01">
-                </div>
-                <div id="valorJuliaY"></div>
-            </div>
-            <div class="deslizador" id="deslizadorJuliaZ">
-                <div>
-                <b>z:</b>
-                </div>
-                <div>
-                <input id="juliaZ" type="range" min="-2" max="2" step="0.01">
-                </div>
-                <div id="valorJuliaZ"></div>
-            </div>
-            <div class="deslizador" id="deslizadorJuliaW">
-                <div>
-                <b>w:</b>
-                </div>
-                <div>
-                <input id="juliaW" type="range" min="-2" max="2" step="0.01">
-                </div>
-                <div id="valorJuliaW"></div>
+                <div id="valorNSamples"></div>
             </div><br>
             <b>Epsilon</b><br>
             <div class="deslizador" id="epsilon">
