Codigo javaScript documentado (#56)

--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -25,7 +25,6 @@
                 <li>Flechas: Desplazarse por el espacio</li>
             </ul>
             <b>Modelo de iluminación</b><br>
-            <input id="ke" type="color"> Componente emisiva<br>
             <input id="ka" type="color"> Componente ambiental<br>
             <input id="kd" type="color"> Componente difusa<br>
             <input id="ks" type="color"> Componente especular<br>
@@ -38,9 +37,9 @@
                 </div>
                 <div id="valor_sh"></div>
             </div>
-            <input id="light_color_0" type="color"> Color de la luz lateral izquierda<br>
+            <input id="lightColor0" type="color"> Color de la luz lateral izquierda<br>
             <input type="checkbox" id="shadows_0" value="0"> <label for="shadow_0">Sombras arrojadas</label><br>
-            <input id="light_color_1" type="color"> Color de la luz lateral derecha<br>
+            <input id="lightColor1" type="color"> Color de la luz lateral derecha<br>
             <input type="checkbox" id="shadows_1" value="0"> <label for="shadow_1">Sombras arrojadas</label><br>
             <div class="fractal">
                 <b>¿Qué fractal quieres ver?</b>
