Añado estilo y funcionalidad a 3D (#63)

--- a/2D-fractals.html
+++ b/2D-fractals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>WebGL-Canvas</title>
+        <title>Fractales 2D</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="module"  src="static/js/fractals-2D.js"></script>
@@ -125,8 +125,6 @@
                 </aside>
             </section>
         </main>
-        <footer>
-        </footer>
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
@@ -140,6 +138,6 @@
               <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
               <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
             </ul>
-          </footer>
+        </footer>
     </body>
 </html>
