--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -61,7 +61,7 @@
                         <div class="accordion-item">
                             <h4 class="accordion-header" id="flush-headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                    <h4>Modelo de iluminación</h4>
+                                    <span class="fs-5 text">Modelo de iluminación</span>
                                 </button>
                             </h4>
                             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" >
@@ -116,7 +116,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                <h4>Multisampling Antiliasing</h4>
+                                    <span class="fs-5 text">Multisampling Antiliasing</span>
                                 </button>
                             </h2>
                             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" >
@@ -138,7 +138,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                <h4>Fractal que se visualiza</h4>
+                                    <span class="fs-5 text">Fractal que se visualiza</span>
                                 </button>
                             </h2>
                             <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" >
@@ -191,7 +191,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                                    <h4>Epsilon</h4>
+                                    <span class="fs-5 text">Epsilon</span>
                                 </button>
                             </h2>
                             <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" >
@@ -211,7 +211,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingFive">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                                    <h4>Posición actual (coordenadas cartesianas)</h4>
+                                    <span class="fs-5 text">Posición actual (coordenadas cartesianas)</span>
                                 </button>
                             </h2>
                             <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" >
