Ajuste para no ejecutar en moviles (#63)

--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -31,7 +31,7 @@
         </header>
         <main class="container">
             <section class="row">
-                <div class="col-8" id="canvas-wapper">
+                <div class="col-lg-8" id="canvas-wapper">
                     <canvas class="container-fluid"  id="glCanvas"  width="1280" height="720"></canvas>
                 </div>
                 
