--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
         <!-- TODO MORE -->
         <style>
-
             .title {
                 font-size: 3rem;
                 position: relative;
@@ -34,13 +33,7 @@
                 transition: all 0.4s ease-in-out;
             }
 
-            .wrapper {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .hover13 :hover .title::after {
+            .contenedor a:hover .title::after {
                 width: 100%;
                 left: 0;
             }
@@ -54,69 +47,23 @@
                 color: initial;
             }
 
-            .hover07 figure img {
-                -webkit-filter: blur(3px);
-                filter: blur(3px);
-                -webkit-transition: .3s ease-in-out;
-                transition: .3s ease-in-out;
-                width: 100%;
-            }
-            .hover07 figure:hover img {
-                -webkit-filter: blur(0);
-                filter: blur(0);
+            .contenedor a {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                color: inherit;
+                text-decoration: inherit;
             }
 
-            .hover13 figure:hover img {
-                opacity: 1;
-                -webkit-animation: flash 1.5s;
-                animation: flash 1.5s;
+            .contenedor a img {
+                width: 80%;
+                height: auto;
+                -webkit-transition: .3s ease-in-out;
+                transition: .3s ease-in-out;
             }
-            @-webkit-keyframes flash {
-                0% {
-                    opacity: .4;
-                }
-                100% {
-                    opacity: 1;
-                }
-            }
-            @keyframes flash {
-                0% {
-                    opacity: .4;
-                }
-                100% {
-                    opacity: 1;
-                }
-            }
-            .hover14 figure {
-                position: relative;
-            }
-            .hover14 figure::before {
-                position: absolute;
-                top: 0;
-                left: -75%;
-                z-index: 2;
-                display: block;
-                content: '';
-                width: 50%;
-                height: 100%;
-                background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-                background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
-                -webkit-transform: skewX(-25deg);
-                transform: skewX(-25deg);
-            }
-            .hover14 figure:hover::before {
-                -webkit-animation: shine .75s;
-                animation: shine .75s;
-            }
-            @-webkit-keyframes shine {
-                100% {
-                    left: 100%;
-                }
-            }
-            @keyframes shine {
-                100% {
-                    left: 100%;
-                }
+
+            .contenedor a:hover img {
+                width: 100%;
             }
 
 
@@ -138,23 +85,25 @@
         <main>
             <section class="row justify-content-around">
                 <section class="col-lg-5">
-                    <a class="hover13 column" href="./2D-fractals.html">
-                        <div class="wrapper">
-                          <figure><img src="static/img/portada-2D.png" /></figure>
-                          <div class="title">Fractales 2D</div>
-                        </div>
-                    </a>
+                    <section class="contenedor">
+                        <a href="./2D-fractals.html">
+                            <img src="static/img/portada-2D.png">
+                            <div class="title">Fractales 2D</div>
+                        </a>
+                    </section>
                 </section>
 
                 <section class="col-lg-5">
-                    <a class="hover13 column" href="./3D-fractals.html">
-                        <div class="wrapper">
-                          <figure><img src="static/img/portada-3D.png" /></figure>
-                          <div class="title">Fractales 3D</div>
-                        </div>
-                    </a>
+                    <section class="contenedor">
+                        <a href="./3D-fractals.html">
+                            <img src="static/img/portada-3D.png">
+                            <div class="title">Fractales 3D</div>
+                        </a>
+                    </section>
                 </section>
             </section>
+
+            
             
 
         </main>
