Volvemos a la versión primitiva

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 
     </head>
     <body>
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <!--
+<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
               <span class="fs-4"><h1>Visualización de fractales</h1></span>
             </a>
 
-            <div class="row justify-content-center">
+            <div class="row justify-content-start">
                 <div class="col-3">
                     <a href="index.html" class="nav-link">
                         <div class="boton boton2">
@@ -49,6 +50,21 @@
             </div>
 
         </header>
+
+        -->
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+              <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+              <span class="fs-4"><h1>Visualización de fractales</h1></span>
+            </a>
+      
+            <ul class="nav nav-pills">
+              <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+              <li class="nav-item"><a href="2D-fractals.html" class="nav-link">Fractales 2D</a></li>
+              <li class="nav-item"><a href="3D-fractals.html" class="nav-link">Fractales 3D</a></li>
+            </ul>
+        </header>
+        
         <main>
             <section class="row justify-content-around">
                 <section class="col-lg-5">
