--- a/2D-fractals.html
+++ b/2D-fractals.html
@@ -32,30 +32,12 @@
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
               <span class="fs-4"><h1>Visualización de fractales</h1></span>
             </a>
-
-            <div class="row justify-content-center">
-                <div class="col-3">
-                    <a href="index.html" class="nav-link">
-                        <div class="boton boton2">
-                            <h4>Home</h4>
-                        </div>
-                      </a>
-                </div>
-                <div class="col-3">
-                    <a href="2D-fractals.html">
-                        <div class="boton boton2">
-                            <h4>Fractales 2D</h4>
-                        </div>
-                      </a>
-                </div>
-                <div class="col-3">
-                    <a href="3D-fractals.html" class="nav-link">
-                        <div class="boton boton2">
-                            <h4>Fractales 3D</h4>
-                        </div>
-                      </a>
-                </div>
-            </div>
+      
+            <ul class="nav nav-pills">
+              <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
+              <li class="nav-item"><a href="2D-fractals.html" class="nav-link">Fractales 2D</a></li>
+              <li class="nav-item"><a href="3D-fractals.html" class="nav-link">Fractales 3D</a></li>
+            </ul>
         </header>
 
         <main class="container">
