--- a/2D-fractals.html
+++ b/2D-fractals.html
@@ -30,13 +30,14 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-              <span class="fs-4"><h1>Visualización de fractales 2D</h1></span>
+              <span class="fs-4"><h1>Visualización de Fractales 2D</h1></span>
             </a>
       
             <ul class="nav nav-pills">
-              <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-              <li class="nav-item"><a href="2D-fractals.html" class="nav-link">Fractales 2D</a></li>
-              <li class="nav-item"><a href="3D-fractals.html" class="nav-link">Fractales 3D</a></li>
+              <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
+              <li class="nav-item"><a href="./2D-fractals.html" class="nav-link">Fractales 2D</a></li>
+              <li class="nav-item"><a href="./3D-fractals.html" class="nav-link">Fractales 3D</a></li>
+
             </ul>
         </header>
 
