--- a/2D-fractals.html
+++ b/2D-fractals.html
@@ -34,9 +34,9 @@
             </a>
       
             <ul class="nav nav-pills">
-              <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
-              <li class="nav-item"><a href="./2D-fractals.html" class="nav-link">Fractales 2D</a></li>
-              <li class="nav-item"><a href="./3D-fractals.html" class="nav-link">Fractales 3D</a></li>
+              <li class="nav-item"><a href="./index.html"><button class="btn-change">Home</button></a></li>
+              <li class="nav-item"><a href="./2D-fractals.html"><button class="btn-change">Fractales 2D</button></a></li>
+              <li class="nav-item"><a href="./3D-fractals.html"><button class="btn-change">Fractales 3D</button></a></li>
 
             </ul>
         </header>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                     </div><br>
-                    <button type="button" class="btn btn-primary" id="botonReset">Volver a los parámetros por defecto</button>
+                    <button type="button" class="btn-change" id="botonReset">Volver a los parámetros por defecto</button>
                 </aside>
             </section>
         </main>
