--- a/index.html
+++ b/index.html
@@ -18,40 +18,6 @@
 
     </head>
     <body>
-        <!--
-<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-              <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-              <span class="fs-4"><h1>Visualización de fractales</h1></span>
-            </a>
-
-            <div class="row justify-content-start">
-                <div class="col-3">
-                    <a href="index.html" class="nav-link">
-                        <div class="boton boton2">
-                            <h4>Home</h4>
-                        </div>
-                      </a>
-                </div>
-                <div class="col-3">
-                    <a href="2D-fractals.html">
-                        <div class="boton boton2">
-                            <h4>Fractales 2D</h4>
-                        </div>
-                      </a>
-                </div>
-                <div class="col-3">
-                    <a href="3D-fractals.html" class="nav-link">
-                        <div class="boton boton2">
-                            <h4>Fractales 3D</h4>
-                        </div>
-                      </a>
-                </div>
-            </div>
-
-        </header>
-
-        -->
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
               <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
@@ -59,9 +25,9 @@
             </a>
       
             <ul class="nav nav-pills">
-              <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
-              <li class="nav-item"><a href="./2D-fractals.html" class="nav-link">Fractales 2D</a></li>
-              <li class="nav-item"><a href="./3D-fractals.html" class="nav-link">Fractales 3D</a></li>
+              <li class="nav-item"><a href="./index.html"><button class="btn-change">Home</button></a></li>
+              <li class="nav-item"><a href="./2D-fractals.html"><button class="btn-change">Fractales 2D</button></a></li>
+              <li class="nav-item"><a href="./3D-fractals.html"><button class="btn-change">Fractales 3D</button></a></li>
 
             </ul>
         </header>
