--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -128,7 +128,7 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                    <span class="fs-5 text">Multisampling Antiliasing</span>
+                                    <span class="fs-5 text">Supersampling Antiliasing</span>
                                 </button>
                             </h2>
                             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" >
