Añadido carrusel de imágenes (#63)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         <main class="container-xl">
             <section class="row justify-content-around">
-                <section class="col-lg-5">
+                <section class="col-lg-6">
                     <section class="contenedor">
                         <a href="./2D-fractals.html">
                             <img src="static/img/portada-2D.png">
@@ -52,7 +52,7 @@
                     </section>
                 </section>
 
-                <section class="col-lg-5">
+                <section class="col-lg-6">
                     <section class="contenedor">
                         <a href="./3D-fractals.html">
                             <img src="static/img/portada-3D.png">
@@ -60,6 +60,82 @@
                         </a>
                     </section>
                 </section>
+            </section>
+            <br>
+            <h2>¿Qué es un fractal?</h2>
+            <section class="w-50 p-3 mx-auto">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="static/img/carousel/1.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 3D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/2.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Mandelbub">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/3.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Mandelbrot 3D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/4.png" class="d-block w-100" data-bs-interval="4000" alt="Detalle del conjunto de Mandelbrot 2D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/5.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Mandelbub">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/6.png" class="d-block w-100" data-bs-interval="4000" alt="Detalle del conjunto de Mandelbrot 2D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/7.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 3D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/8.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 2D de orden 6">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/9.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Mandelbub">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/10.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 2D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/11.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 3D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/12.png" class="d-block w-100" data-bs-interval="4000" alt="Detalle del conjunto de Mandelbrot de orden 3">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/13.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Mandelbub">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/14.png" class="d-block w-100" data-bs-interval="4000" alt="Detalle del conjunto de Mandelbrot 2D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/15.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Mandelbub">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/16.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 2D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/17.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 3D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/18.png" class="d-block w-100" data-bs-interval="4000" alt="Detalle del conjunto de Mandelbrot 2D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/19.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Mandelbrot 3D">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="static/img/carousel/20.png" class="d-block w-100" data-bs-interval="4000" alt="Conjunto de Julia 2D">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
             </section>
             
 
