Cambio antiliasing por antialiasing (#68)

--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -128,13 +128,13 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="flush-headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                    <span class="fs-5 text">Supersampling Antiliasing</span>
+                                    <span class="fs-5 text">Supersampling Antialiasing</span>
                                 </button>
                             </h2>
                             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" >
                                 <div class="form-check form-switch" style="padding-left: 5.5em;">
-                                    <input class="form-check-input" type="checkbox" id="antiliasing">
-                                    <label class="form-check-label" for="antiliasing">Activar/desactivar</label>
+                                    <input class="form-check-input" type="checkbox" id="antialiasing">
+                                    <label class="form-check-label" for="antialiasing">Activar/desactivar</label>
                                 </div>
 
                                 <div class="container" id="deslizadorNSamples">
