--- a/2D-fractals.html
+++ b/2D-fractals.html
@@ -130,14 +130,14 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                              <span class="fs-5 text">Supersampling Antiliasing</span>
+                              <span class="fs-5 text">Supersampling Antialiasing</span>
                             </button>
                           </h2>
                           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
                                 <div class="form-check form-switch" style="padding-left: 5.5em;">
-                                    <input class="form-check-input" type="checkbox" id="antiliasing">
-                                    <label class="form-check-label" for="antiliasing">Activar/desactivar</label>
+                                    <input class="form-check-input" type="checkbox" id="antialiasing">
+                                    <label class="form-check-label" for="antialiasing">Activar/desactivar</label>
                                 </div>
         
                                 <div class="container" id="deslizadorNSamples">
