--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -19,12 +19,12 @@
         <!-- TODO MORE -->
     </head>
     <body>
-        <header class="row d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom w-100 p-3">
-            <a href="index.html" class="d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none col-xl-8">
+        <header class="row d-flex flex-wrap justify-content-around py-3 mb-4 border-bottom w-100 p-3">
+            <a href="index.html" class="d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none col-xl-6">
               <img src="static/img/logo.png" id="logo">
               <span class="fs-4"><h1>Visualización de Fractales 3D</h1></span>
             </a>
-            <ul class="nav nav-pills col-xl-4 justify-content-center">
+            <ul class="nav nav-pills col-xl-6 justify-content-center">
                 <li class="nav-item"><a href="./index.html"><button class="btn-change">Home</button></a></li>
                 <li class="nav-item"><a href="./2D-fractals.html"><button class="btn-change">Fractales 2D</button></a></li>
                 <li class="nav-item"><a href="./3D-fractals.html"><button class="btn-change">Fractales 3D</button></a></li>    
