--- a/2D-fractals.html
+++ b/2D-fractals.html
@@ -29,7 +29,7 @@
         <!-- TODO MORE -->
     </head>
     <body>
-      <header class="row d-flex flex-wrap justify-content-around py-3 mb-4 border-bottom w-100 p-3">
+      <header class="row d-flex flex-wrap justify-content-around py-3 mb-4 border-bottom p-3">
         <a href="index.html" class="d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none col-xl-6">
           <img src="static/img/logo.png" id="logo">
           <span class="fs-4"><h1>Visualización de Fractales 2D</h1></span>
