--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
   <head>
     <title>Fractales</title>
-    
 
     <!-- jQuery -->
     <script type="text/javascript" src="static/js/jquery-3.6.0.min.js"></script>
@@ -26,6 +25,7 @@
     <meta name="application-name" content="Visualización de fractales">
     <meta name="author" content="Juan Antonio Villegas Recio">
     <meta name="description" content="Página inicial del proyecto">
+    <link rel="icon" href="static/img/logo.png">
   </head>
 
   <body>
