--- a/3D-fractals.html
+++ b/3D-fractals.html
@@ -43,7 +43,7 @@
       </ul>
     </header>
 
-    <main class="container">
+    <main class="container-xl">
       <section class="row">
         <div class="col-lg-8" id="canvas-wapper">
           <canvas class="container-fluid"  id="glCanvas"  width="1280" height="720"></canvas>
