Cambio nombres a algunas imágenes

--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
         <ul>
           <li>
             El <b>Triángulo de Sierpinski</b><br>
-            <img class="w-25 p-3 mx-auto d-block" src="static/img/Sierpinski-removebg-preview.png">
+            <img class="w-25 p-3 mx-auto d-block" src="static/img/Sierpinski.png">
           </li>
 
           <li>
             El <b>Conjunto de Cantor</b><br>
-            <img class="w-50 p-3 mx-auto d-block" src="static/img/Cantor-removebg-preview.png" >
+            <img class="w-50 p-3 mx-auto d-block" src="static/img/Cantor.png" >
           </li>
           <li>
             O el <b>Copo de nieve de Koch</b><br>
-            <img class="w-25 p-3 mx-auto d-block" src="static/img/Koch-removebg-preview.png">
+            <img class="w-25 p-3 mx-auto d-block" src="static/img/Koch.png">
           </li>
 
         </ul>
